--- a/_data/news.yml
+++ b/_data/news.yml
@@ -28,3 +28,5 @@
   description: Received an award from the Department of Statistics & Operations Research for excellence in teaching.
 - date: 2023-07-21
   description: I am attending JSM in Toronto in August.
+- date: 2023-08-24
+  description: My preprint <a href="https://arxiv.org/abs/2308.13079">"Powerful Significance Testing for Unbalanced Clusters"</a> is on arXiv.
