--- a/_data/news.yml
+++ b/_data/news.yml
@@ -30,3 +30,8 @@
   description: I am attending JSM in Toronto in August.
 - date: 2023-08-24
   description: My preprint <a href="https://arxiv.org/abs/2308.13079">"Powerful Significance Testing for Unbalanced Clusters"</a> is on arXiv.
+- date: 2023-11-17
+  description: Completed my PhD defense of my dissertation "Unsupvervised Machine Learning with Applications to Disease Phenotyping"!
+- date: 2023-01-04
+  description: Received the Druscilla French Graduate Fellowship, awarded to a half-dozen UNC students per year.
+  
